# tanmatsu_demo

main/: CMakeLists.txt  bmi270_interface.c  idf_component.yml  main.c
main/bmi270_sensor_api/: git_commit
