idf_component_register(
	SRCS
		"main.c"
		bmi270_sensor_api/bmi2.c
		bmi270_sensor_api/bmi2_ois.c
		bmi270_sensor_api/bmi270.c
		bmi270_sensor_api/bmi270_context.c
		bmi270_sensor_api/bmi270_legacy.c
		bmi270_sensor_api/bmi270_maximum_fifo.c
		bmi270_interface.c
	PRIV_REQUIRES
		esp_lcd
		esp_driver_i2c
		fatfs
		nvs_flash
		badge-bsp
	INCLUDE_DIRS
		"."
		"bmi270_sensor_api"
)
